# TestCmake

./: CMakeLists.txt  MyProject.cpp  MyProject.h  README.md
src/Assign1/: CMakeLists.txt  MyProject.h
